# super-input-box-beautiful

./: README.md  background.js  content.js  create-placeholder-icons.js  iframe-inject.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js  split.css  split.html  split.js  test-iframe.html  test.html
批量问AI/: BUILD.gn  HOW_TO_INSTALL.txt  app.js  background.js  content.js  index.html  manifest.json
批量问AI/assets/: app.D394DvfY.css
